<resources>
    <string name="app_name">LivrePartage</string>
    <string name="titre">Titre</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="bookworm">BookWorm</string>

    <string name="full_name">Full Name</string>
    <string name="button">Button</string>
    <string name="inTextview">inTextView</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_in_and_get_get_ready_to_borrow_your_favorite_book">Log in and get ready to borrow your favorite book</string>
    <string name="loginBtn">LogIn</string>
    <string name="new_here_click_here_to_register">New here? Click here to register</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone number</string>
    <string name="profile_change_values_change">Change my data</string>
    <string name="profile_change_values_save">Save</string>
    <string name="auteur">Auteur</string>
    <string name="edition">Edition</string>
    <string name="genre">Genre</string>
    <string name="my_profile">My Profile</string>
    <string name="publish_book">Publish Book</string>
    <string name="logout">Logout</string>
    <!--    -->
</resources>